--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="about_application">Tentang Aplikasi ⋆. 𐙚 ˚</string>
     <string name="about_description">WishlyStack adalah sebuah aplikasi yang dapat membantu dalam mencatat semua daftar keinginan baik itu barang atau goals, mengelola prioritas, serta mencantumkan notes kecil sebagai motivasi dari pengguna untuk merealisasikan harapannya.</string>
     <string name="signature">Tertanda, Tiyas Insania D.</string>
+    <string name="loading">Loading</string>
 </resources>
