Memperbaiki tampilan bottom bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="list">Tampilan List</string>
     <string name="info">Tampilan info</string>
     <string name="grid">Tampilan grid</string>
-    <string name="about_application">Tentang Aplikasi ⋆. 𐙚 ˚</string>
+    <string name="about_application">Tentang Aplikasi</string>
     <string name="about_description">WishlyStack adalah sebuah aplikasi yang dapat membantu dalam mencatat semua daftar keinginan baik itu barang atau goals, mengelola prioritas, serta mencantumkan notes kecil sebagai motivasi dari pengguna untuk merealisasikan harapannya.</string>
     <string name="signature">Tertanda, Tiyas Insania D.</string>
     <string name="loading">Loading</string>
