--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,22 +3,54 @@
     <string name="list_kosong">Belum ada data</string>
     <string name="x_diklik">%1$s diklik!</string>
     <string name="tambah_daftar">Tambah daftar keinginan</string>
-    <string name="judul">Judul</string>
-    <string name="isi_daftar">Isi daftar keinginan</string>
     <string name="kembali">Kembali</string>
     <string name="simpan">Simpan</string>
     <string name="edit_daftar">Ubah daftar keinginan</string>
     <string name="invalid">Judul dan isi daftar keinginan tidak boleh kosong</string>
     <string name="lainnya">Opsi lainnya</string>
     <string name="hapus">Hapus daftar keinginan</string>
-    <string name="pesan_hapus">Hapus daftar keinginan ini?</string>
+    <string name="pesan_hapus">Anda yakin akan menghapus daftar keinginan ini?</string>
     <string name="tombol_hapus">Hapus</string>
     <string name="tombol_batal">Batal</string>
-    <string name="list">Tampilan List</string>
-    <string name="info">Tampilan info</string>
-    <string name="grid">Tampilan grid</string>
+    <string name="list" translatable="false">Tampilan List</string>
+    <string name="info" translatable="false">Tampilan info</string>
+    <string name="grid" translatable="false">Tampilan grid</string>
     <string name="about_application">Tentang Aplikasi</string>
     <string name="about_description">WishlyStack adalah sebuah aplikasi yang dapat membantu dalam mencatat semua daftar keinginan baik itu barang atau goals, mengelola prioritas, serta mencantumkan notes kecil sebagai motivasi dari pengguna untuk merealisasikan harapannya.</string>
     <string name="signature">Tertanda, Tiyas Insania D.</string>
-    <string name="loading">Loading</string>
+    <string name="loading" translatable="false">Loading</string>
+    <string name="tambah_kategori">Tambah Kategori</string>
+    <string name="belum_ada_kategori">Belum ada kategori</string>
+    <string name="kategori_digunakan">Kategori sedang digunakan, tidak bisa dihapus</string>
+    <string name="kategori_dihapus">Kategori dihapus</string>
+    <string name="wishlist" translatable="false">Wishlist</string>
+    <string name="gambar_wish" translatable="false">Gambar Wish</string>
+    <string name="price_format">Harga: Rp%1$d</string>
+    <string name="nama_kategori">Nama Kategori</string>
+    <string name="nama_tidak_boleh_kosong">Nama tidak boleh kosong</string>
+    <string name="pesan_hapus_kategori">Apakah anda yakin akan menghapus kategori ini?</string>
+    <string name="edit_wishlist" translatable="false">Edit Wishlist</string>
+    <string name="item_tidak_ditemukan">Item tidak ditemukan</string>
+    <string name="nama">Nama</string>
+    <string name="harga">Harga</string>
+    <string name="kategori">Kategori</string>
+    <string name="prioritas">Prioritas</string>
+    <string name="deskripsi">Deskripsi</string>
+    <string name="pilih_kategori">Pilih kategori</string>
+    <string name="prioritas_rendah">Rendah</string>
+    <string name="prioritas_sedang">Sedang</string>
+    <string name="prioritas_tinggi">Tinggi</string>
+    <string name="tambah_wishlist">Tambah Wishlist</string>
+    <string name="wishlist_tidak_boleh_kosong">Wishlist tidak boleh kosong</string>
+    <string name="kategori_tidak_boleh_kosong">Kategori tidak boleh kosong</string>
+    <string name="harga_tidak_boleh_kosong">Harga tidak boleh kosong atau bukan angka</string>
+    <string name="prioritas_tidak_boleh_kosong">Prioritas tidak boleh kosong</string>
+    <string name="catatan">Catatan</string>
+    <string name="wishlystack" translatable="false">WishlyStack</string>
+    <string name="wishlystack_tagline" translatable="false">Sometimes putting everything on a list can make it come true</string>
+    <string name="cat" translatable="false">Cat</string>
+    <string name="submit" translatable="false">Submit</string>
+    <string name="edit" translatable="false">Edit</string>
+    <string name="details" ranslatable="false">Details</string>
+    <string name="tambah">Tambah</string>
 </resources>
